<resources>
    <string name="app_name">jpj</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="tab_group">群组</string>
    <string name="tab_map">地图</string>
    <string name="tab_history">历史</string>
    <string name="tab_set">设置</string>

    <!-- Region -->
    <string name="choose_province">请选择省份</string>
    <string name="choose_city">请选择城市</string>
    <string name="choose_county">请选择县区</string>
    <string name="choose_nonnull">请选择地区!</string>
    <string name="Province">省份:</string>
    <string name="City">城市:</string>
    <string name="county">县城镇:</string>
    <string name="result">输出结果</string>
    <string name="modifyRegion_succ">地区修改成功</string>
    <string name="title_activity_set_user">编辑</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登   录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_password">密码长度太短</string>
    <string name="error_invalid_password_not">密码不能为空</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">账号不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- updata -->
    <string name="update_background">正在后台更新程序，更新完后自动安装......</string>
    <string name="updata_install">下载成功，点击安装</string>
    <string name="updata_down_fail">下载失败</string>
    <string name="updata_down_start">开始下载</string>
    <string name="updata_down">下载</string>
    <string name="updata_down_ing">正在下载</string>
    <string name="version_updata_yes">发现更新</string>
    <string name="tv_updata_no">暂不更新</string>
    <string name="tv_updata_yes">立即更新</string>
    <string name="no_tiles">不再提示</string>
    <string name="updata_version">关于POC</string>
    <string name="updata_version_name">版本 :</string>
    <string name="updata_version_num">V2015.05.20</string>
    <string name="tv_updata_find_no">没有发现更新</string>
</resources>
