<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/id_tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingTop="3dp"
        android:weightSum="5">

        <!-- &&&&&&&&&&&&&&&&&&&&&&&&&&& -->
        <LinearLayout
            android:id="@+id/id_tab_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon0"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:adjustViewBounds="true"
                android:src="@drawable/bb_btn_home_select" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tab_group"
                android:textSize="10sp" />

        </LinearLayout>

        <!-- &&&&&&&&&&&&&&&&&&&&&&&&&&& -->
        <LinearLayout
            android:id="@+id/id_tab_map"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon1"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/bb_btn_label_unselect" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tab_map"
                android:textSize="10sp" />

        </LinearLayout>

        <!-- &&&&&&&&&&&&&&&&&&&&&&&&&&& -->
        <LinearLayout
            android:id="@+id/id_tab_browse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bb_btn_post_select" />


        </LinearLayout>

        <!-- &&&&&&&&&&&&&&&&&&&&&&&&&&& -->
        <LinearLayout
            android:id="@+id/id_tab_history"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon3"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/bb_btn_message_unselect" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tab_history"
                android:textSize="10sp" />

        </LinearLayout>

        <!-- &&&&&&&&&&&&&&&&&&&&&&&&&&& -->
        <LinearLayout
            android:id="@+id/id_tab_set"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon4"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/bb_btn_account_unselect" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tab_set"
                android:textSize="10sp" />

        </LinearLayout>


    </LinearLayout>

</FrameLayout>
